--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,11 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-gist
+  - jekyll-seo-tag
 
 # Exclude these files from your production _site
 exclude:
