--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Piotr Płoński
 
 # Short bio or description (displayed in the header)
-description: Software Developer
+description: Machine Learning, Data Science, Data and Software Engineering
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/6959032?s=460&v=4
@@ -85,3 +85,7 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
+twitter:
+  username: MLJARofficial
+  card: summary
